--- a/src/Styles/Table.scss
+++ b/src/Styles/Table.scss
@@ -9,17 +9,46 @@
   &__box {
       background-color: #efefef;
       border: 1px solid #656677;
-      width: 100vw;
+      width: 90vw;
       margin-bottom: 10rem;
-      padding: 3rem 10rem;
+      padding: 5rem 5.6rem;
 
-      &--th, &--td {
-        padding: 1rem 3rem;
-        border: 1px solid #434cb7;
+      &--tr {
+          cursor: pointer;
+          transition: 0.001s ease-in-out;
+
+          &:hover, &:active, &:focus {
+            background-color: rgb(63, 62, 126);
+            color: #ffffff;
+            transform: scale(1.01);
+          }
       }
-      &--td {
-          font-size: 1.5rem;
+      
+      &--th, &--td {
+          padding: 1rem 3rem;
+          border: 1px solid #434cb7;
+        }
+
+        &--td {
+            font-size: 1.5rem;
       }
   }
 
+}
+
+.button-secondary {
+    background-color: rgb(63, 62, 126);
+    color: #ffffff;
+    height: 3rem;
+    width: 9rem;
+    border-radius: 2.5rem;
+    margin: 1rem;
+    cursor: pointer;
+    transition: 0.6s ease-in-out;
+    
+    &:hover {
+    background-color: #efefef;
+    color: #000000;
+    transform: scale(1.1);
+  }
 }
